Overflow issue solved

--- a/Vanilla JS projects/Image Carousel/style.css
+++ b/Vanilla JS projects/Image Carousel/style.css
@@ -8,6 +8,9 @@
 body {
   overflow: hidden;
 }
+section{
+  overflow: hidden;
+}
 .carousel {
   width: 100vw;
   height: 100vh;
